--- a/pom.xml
+++ b/pom.xml
@@ -161,27 +161,27 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>com.diffplug.spotless</groupId>
-                <artifactId>spotless-maven-plugin</artifactId>
-                <version>2.27.2</version>
-                <configuration>
-                    <java>
-                        <toggleOffOn/>
-                        <googleJavaFormat>
-                            <version>1.11.0</version>
-                            <style>AOSP</style>
-                        </googleJavaFormat>
-                    </java>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>com.diffplug.spotless</groupId>-->
+<!--                <artifactId>spotless-maven-plugin</artifactId>-->
+<!--                <version>2.27.2</version>-->
+<!--                <configuration>-->
+<!--                    <java>-->
+<!--                        <toggleOffOn/>-->
+<!--                        <googleJavaFormat>-->
+<!--                            <version>1.11.0</version>-->
+<!--                            <style>AOSP</style>-->
+<!--                        </googleJavaFormat>-->
+<!--                    </java>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
 
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
